# gladier-client-template

./: CHANGELOG.md  CITATION.cff  PAPER-CLIENTS.md  PAPER-HOW-TO.md  README.md  client.py  pyproject.toml  requirements.txt  setup.py
.github/: README_STD.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  create.yml  create_project.sh  rename_project.sh
.github/workflows/workflows/: create.yml
example_client/: cli.py  deployments.py  example_client.py  example_client_publish.py  example_client_transfer.py
example_client/tools/: __init__.py  example_transfer.py  simple_funcx_tool.py  simple_transfer.py  text_to_image.py
fs_trigger_client/: watcher_client.py
fs_trigger_client/tools/: folder_watch.py
full_client/: full_client.py  watcher_client.py
full_client/tools/: gather_metadata.py  simple_compute_tool.py  simple_funcx_tool.py  transfer_out.py
gladier-client/tools/: add_text.py  example_transfer.py  https_download_file.py  posix_tar.py  posix_untar.py
gladier_client/: README.md  deployments.py
gladier_client/flows/: README.md
gladier_client/tools/: README.md  __init__.py  example_tool.py
notebooks/: README.md  awesome.sauce  basic_funcx_flow.ipynb  get_server_info.ipynb  gladier_basic_client.ipynb  gladier_demo_client.ipynb  gladier_inter_client.ipynb
paper_demo/: PAPER-CLIENTS.md  PAPER-HOW-TO.md  ptychodus_client.py  test_client.py  xpcs_client.py
paper_demo/tools/: ptychodus_plot.py  xpcs_boost_corr.py
recipes/: README.md  template.recipe
scripts/: README.md  basic_client.py  create_search_index.py  gladier_client_single.py
simple_clients/: example_client_process.py  example_client_publish.py  example_client_transfer.py
simple_clients/tools/: simple_publish.py  simple_transfer.py
weather_example_client/: cli.py  weather_example_client.py
weather_example_client/tools/: will_it_rain.py
